--- a/css/main.css
+++ b/css/main.css
@@ -31,3 +31,17 @@ body {
     margin: 0px auto;
     padding: 10px 20px;
 }
+
+.cars {
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-bottom: -40px;
+}
+
+.cars__item {
+    margin-bottom: 40px;
+}
